--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -17,7 +17,7 @@ on:
   merge_group:
     branches: [ "main" ]
   schedule:
-    - cron: '40 2 * * 1,3,5,6'
+    - cron: '40 2 * * *'
   push:
     branches: [ "main" ]
 
